// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Default > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="centerItems header">
    <div class="spaceBetween inner centerItems"><a class="centerItems buttonLink hideDesktop hideDesktop" title="Home">
        <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="centerItems">
            <div class="column inputField inputField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="centerItems buttonLink buttonLink buttonLink" type="submit">
              <phmagnifyingglass class="icon" aria-hidden="true" size="24" weight="duotone"></phmagnifyingglass><span class="clamp text visuallyHidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <!--v-if-->
    </div>
  </header>
  <aside>
    <div class="centerItems column sidebarNavigation hideMobile">
      <div class="mBM centerAll spaceBetween header"><a class="centerItems buttonLink musicLogo musicLogo" title="Home">
          <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
        </a><button class="centerItems buttonLink" type="button" title="Close Navigation">
          <phtextoutdent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextoutdent><span class="clamp text visuallyHidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Browse</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Discover">
                  <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Discover</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Podcasts">
                  <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="clamp text">Podcasts</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Radio Stations">
                  <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="clamp text">Radio Stations</span>
                </a></li>
            </ul>
          </li>
          <li>
            <h4 class="strong mBM sidebarTitle">Your library</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Albums">
                  <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="clamp text">Albums</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Artists">
                  <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="clamp text">Artists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Playlists">
                  <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Favourites">
                  <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text">Favourites</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Genres">
                  <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="clamp text">Genres</span>
                </a></li>
            </ul>
          </li>
        </ul>
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Playlist</h4>
            <ul class="mBM"></ul>
          </li>
          <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="clamp text"> Add playlist </span>
            </button></li>
        </ul>
      </nav>
    </div>
    <nav class="hideDesktop">
      <ul class="inner centerAll spaceBetween mobileNavigation">
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Browse">
            <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Browse</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Your library">
            <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="clamp text">Your library</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Playlists">
            <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
          </a></li>
      </ul>
    </nav>
  </aside>
  <main class="main mainContent">
    <div class="column mainContentInner">
      <!--v-if-->
      <div class="inner mBAllL">Default slot content.</div>
    </div>
  </main>
  <footer>
    <!--v-if-->
  </footer>
</div>"
`;

exports[`Default > when route name is index > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="centerItems header">
    <div class="spaceBetween inner centerItems"><a class="centerItems buttonLink hideDesktop hideDesktop" title="Home">
        <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="centerItems">
            <div class="column inputField inputField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="centerItems buttonLink buttonLink buttonLink" type="submit">
              <phmagnifyingglass class="icon" aria-hidden="true" size="24" weight="duotone"></phmagnifyingglass><span class="clamp text visuallyHidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="centerItems secondary">
        <div class="secondaryItem"><button class="centerItems buttonLink" type="button" title="Activate dark mode">
            <phmoon class="icon" aria-hidden="true" size="24" weight="duotone"></phmoon><span class="clamp text visuallyHidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="View account details">
              <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="clamp text">username</span>
            </button>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside>
    <div class="centerItems column sidebarNavigation hideMobile">
      <div class="mBM centerAll spaceBetween header"><a class="centerItems buttonLink musicLogo musicLogo" title="Home">
          <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
        </a><button class="centerItems buttonLink" type="button" title="Close Navigation">
          <phtextoutdent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextoutdent><span class="clamp text visuallyHidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Browse</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Discover">
                  <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Discover</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Podcasts">
                  <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="clamp text">Podcasts</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Radio Stations">
                  <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="clamp text">Radio Stations</span>
                </a></li>
            </ul>
          </li>
          <li>
            <h4 class="strong mBM sidebarTitle">Your library</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Albums">
                  <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="clamp text">Albums</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Artists">
                  <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="clamp text">Artists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Playlists">
                  <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Favourites">
                  <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text">Favourites</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Genres">
                  <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="clamp text">Genres</span>
                </a></li>
            </ul>
          </li>
        </ul>
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Playlist</h4>
            <ul class="mBM"></ul>
          </li>
          <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="clamp text"> Add playlist </span>
            </button></li>
        </ul>
      </nav>
    </div>
    <nav class="hideDesktop">
      <ul class="inner centerAll spaceBetween mobileNavigation">
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Browse">
            <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Browse</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Your library">
            <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="clamp text">Your library</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Playlists">
            <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
          </a></li>
      </ul>
    </nav>
  </aside>
  <main class="main mainContent">
    <div class="column mainContentInner noPaddingTop">
      <nav class="pageNavigation hideDesktop mBL">
        <ul class="centerItems navigation">
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Discover</span>
            </a></li>
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Podcasts</span>
            </a></li>
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Radio Stations</span>
            </a></li>
        </ul>
      </nav>
      <div class="inner mBAllL">Default slot content.</div>
    </div>
  </main>
  <footer>
    <music-player-stub></music-player-stub>
  </footer>
</div>"
`;

exports[`Default > when route name is podcast-sortBy-id > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="centerItems header">
    <div class="spaceBetween inner centerItems"><a class="centerItems buttonLink hideDesktop hideDesktop" title="Home">
        <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="centerItems">
            <div class="column inputField inputField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="centerItems buttonLink buttonLink buttonLink" type="submit">
              <phmagnifyingglass class="icon" aria-hidden="true" size="24" weight="duotone"></phmagnifyingglass><span class="clamp text visuallyHidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="centerItems secondary">
        <div class="secondaryItem"><button class="centerItems buttonLink" type="button" title="Activate dark mode">
            <phmoon class="icon" aria-hidden="true" size="24" weight="duotone"></phmoon><span class="clamp text visuallyHidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="View account details">
              <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="clamp text">username</span>
            </button>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside>
    <div class="centerItems column sidebarNavigation hideMobile">
      <div class="mBM centerAll spaceBetween header"><a class="centerItems buttonLink musicLogo musicLogo" title="Home">
          <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
        </a><button class="centerItems buttonLink" type="button" title="Close Navigation">
          <phtextoutdent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextoutdent><span class="clamp text visuallyHidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Browse</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Discover">
                  <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Discover</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Podcasts">
                  <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="clamp text">Podcasts</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Radio Stations">
                  <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="clamp text">Radio Stations</span>
                </a></li>
            </ul>
          </li>
          <li>
            <h4 class="strong mBM sidebarTitle">Your library</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Albums">
                  <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="clamp text">Albums</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Artists">
                  <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="clamp text">Artists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Playlists">
                  <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Favourites">
                  <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text">Favourites</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Genres">
                  <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="clamp text">Genres</span>
                </a></li>
            </ul>
          </li>
        </ul>
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Playlist</h4>
            <ul class="mBM"></ul>
          </li>
          <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="clamp text"> Add playlist </span>
            </button></li>
        </ul>
      </nav>
    </div>
    <nav class="hideDesktop">
      <ul class="inner centerAll spaceBetween mobileNavigation">
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Browse">
            <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Browse</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Your library">
            <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="clamp text">Your library</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Playlists">
            <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
          </a></li>
      </ul>
    </nav>
  </aside>
  <main class="main mainContent">
    <div class="column mainContentInner noPaddingTop">
      <nav class="pageNavigation hideDesktop mBL">
        <ul class="centerItems navigation">
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Discover</span>
            </a></li>
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Podcasts</span>
            </a></li>
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Radio Stations</span>
            </a></li>
        </ul>
      </nav>
      <div class="inner mBAllL">Default slot content.</div>
    </div>
  </main>
  <footer>
    <music-player-stub></music-player-stub>
  </footer>
</div>"
`;

exports[`Default > when route name is podcasts-sortBy > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="centerItems header">
    <div class="spaceBetween inner centerItems"><a class="centerItems buttonLink hideDesktop hideDesktop" title="Home">
        <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="centerItems">
            <div class="column inputField inputField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="centerItems buttonLink buttonLink buttonLink" type="submit">
              <phmagnifyingglass class="icon" aria-hidden="true" size="24" weight="duotone"></phmagnifyingglass><span class="clamp text visuallyHidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="centerItems secondary">
        <div class="secondaryItem"><button class="centerItems buttonLink" type="button" title="Activate dark mode">
            <phmoon class="icon" aria-hidden="true" size="24" weight="duotone"></phmoon><span class="clamp text visuallyHidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="View account details">
              <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="clamp text">username</span>
            </button>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside>
    <div class="centerItems column sidebarNavigation hideMobile">
      <div class="mBM centerAll spaceBetween header"><a class="centerItems buttonLink musicLogo musicLogo" title="Home">
          <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
        </a><button class="centerItems buttonLink" type="button" title="Close Navigation">
          <phtextoutdent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextoutdent><span class="clamp text visuallyHidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Browse</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Discover">
                  <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Discover</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Podcasts">
                  <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="clamp text">Podcasts</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Radio Stations">
                  <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="clamp text">Radio Stations</span>
                </a></li>
            </ul>
          </li>
          <li>
            <h4 class="strong mBM sidebarTitle">Your library</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Albums">
                  <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="clamp text">Albums</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Artists">
                  <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="clamp text">Artists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Playlists">
                  <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Favourites">
                  <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text">Favourites</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Genres">
                  <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="clamp text">Genres</span>
                </a></li>
            </ul>
          </li>
        </ul>
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Playlist</h4>
            <ul class="mBM"></ul>
          </li>
          <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="clamp text"> Add playlist </span>
            </button></li>
        </ul>
      </nav>
    </div>
    <nav class="hideDesktop">
      <ul class="inner centerAll spaceBetween mobileNavigation">
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Browse">
            <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Browse</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Your library">
            <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="clamp text">Your library</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Playlists">
            <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
          </a></li>
      </ul>
    </nav>
  </aside>
  <main class="main mainContent">
    <div class="column mainContentInner noPaddingTop">
      <nav class="pageNavigation hideDesktop mBL">
        <ul class="centerItems navigation">
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Discover</span>
            </a></li>
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Podcasts</span>
            </a></li>
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Radio Stations</span>
            </a></li>
        </ul>
      </nav>
      <div class="inner mBAllL">Default slot content.</div>
    </div>
  </main>
  <footer>
    <music-player-stub></music-player-stub>
  </footer>
</div>"
`;

exports[`Default > when route name is radio-stations > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="centerItems header">
    <div class="spaceBetween inner centerItems"><a class="centerItems buttonLink hideDesktop hideDesktop" title="Home">
        <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="centerItems">
            <div class="column inputField inputField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="centerItems buttonLink buttonLink buttonLink" type="submit">
              <phmagnifyingglass class="icon" aria-hidden="true" size="24" weight="duotone"></phmagnifyingglass><span class="clamp text visuallyHidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="centerItems secondary">
        <div class="secondaryItem"><button class="centerItems buttonLink" type="button" title="Activate dark mode">
            <phmoon class="icon" aria-hidden="true" size="24" weight="duotone"></phmoon><span class="clamp text visuallyHidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="View account details">
              <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="clamp text">username</span>
            </button>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside>
    <div class="centerItems column sidebarNavigation hideMobile">
      <div class="mBM centerAll spaceBetween header"><a class="centerItems buttonLink musicLogo musicLogo" title="Home">
          <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
        </a><button class="centerItems buttonLink" type="button" title="Close Navigation">
          <phtextoutdent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextoutdent><span class="clamp text visuallyHidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Browse</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Discover">
                  <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Discover</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Podcasts">
                  <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="clamp text">Podcasts</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Radio Stations">
                  <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="clamp text">Radio Stations</span>
                </a></li>
            </ul>
          </li>
          <li>
            <h4 class="strong mBM sidebarTitle">Your library</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Albums">
                  <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="clamp text">Albums</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Artists">
                  <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="clamp text">Artists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Playlists">
                  <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Favourites">
                  <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text">Favourites</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Genres">
                  <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="clamp text">Genres</span>
                </a></li>
            </ul>
          </li>
        </ul>
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Playlist</h4>
            <ul class="mBM"></ul>
          </li>
          <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="clamp text"> Add playlist </span>
            </button></li>
        </ul>
      </nav>
    </div>
    <nav class="hideDesktop">
      <ul class="inner centerAll spaceBetween mobileNavigation">
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Browse">
            <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Browse</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Your library">
            <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="clamp text">Your library</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Playlists">
            <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
          </a></li>
      </ul>
    </nav>
  </aside>
  <main class="main mainContent">
    <div class="column mainContentInner noPaddingTop">
      <nav class="pageNavigation hideDesktop mBL">
        <ul class="centerItems navigation">
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Discover</span>
            </a></li>
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Podcasts</span>
            </a></li>
          <li class="item"><a exactactiveclass="pageCurrentLink" class="centerItems buttonLink link pageLink link pageLink">
              <!--v-if--><span class="clamp text">Radio Stations</span>
            </a></li>
        </ul>
      </nav>
      <div class="inner mBAllL">Default slot content.</div>
    </div>
  </main>
  <footer>
    <music-player-stub></music-player-stub>
  </footer>
</div>"
`;

exports[`Default > when showMediaPlayer value is false > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="centerItems header">
    <div class="spaceBetween inner centerItems"><a class="centerItems buttonLink hideDesktop hideDesktop" title="Home">
        <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="centerItems">
            <div class="column inputField inputField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="centerItems buttonLink buttonLink buttonLink" type="submit">
              <phmagnifyingglass class="icon" aria-hidden="true" size="24" weight="duotone"></phmagnifyingglass><span class="clamp text visuallyHidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="centerItems secondary">
        <div class="secondaryItem"><button class="centerItems buttonLink" type="button" title="Activate dark mode">
            <phmoon class="icon" aria-hidden="true" size="24" weight="duotone"></phmoon><span class="clamp text visuallyHidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="View account details">
              <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="clamp text">username</span>
            </button>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside>
    <div class="centerItems column sidebarNavigation hideMobile">
      <div class="mBM centerAll spaceBetween header"><a class="centerItems buttonLink musicLogo musicLogo" title="Home">
          <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
        </a><button class="centerItems buttonLink" type="button" title="Close Navigation">
          <phtextoutdent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextoutdent><span class="clamp text visuallyHidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Browse</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Discover">
                  <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Discover</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Podcasts">
                  <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="clamp text">Podcasts</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Radio Stations">
                  <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="clamp text">Radio Stations</span>
                </a></li>
            </ul>
          </li>
          <li>
            <h4 class="strong mBM sidebarTitle">Your library</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Albums">
                  <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="clamp text">Albums</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Artists">
                  <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="clamp text">Artists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Playlists">
                  <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Favourites">
                  <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text">Favourites</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Genres">
                  <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="clamp text">Genres</span>
                </a></li>
            </ul>
          </li>
        </ul>
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Playlist</h4>
            <ul class="mBM"></ul>
          </li>
          <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="clamp text"> Add playlist </span>
            </button></li>
        </ul>
      </nav>
    </div>
    <nav class="hideDesktop">
      <ul class="inner centerAll spaceBetween mobileNavigation">
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Browse">
            <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Browse</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Your library">
            <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="clamp text">Your library</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Playlists">
            <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
          </a></li>
      </ul>
    </nav>
  </aside>
  <main class="main mainContent">
    <div class="column mainContentInner">
      <!--v-if-->
      <div class="inner mBAllL">Default slot content.</div>
    </div>
  </main>
  <footer>
    <!--v-if-->
  </footer>
</div>"
`;

exports[`Default > when showMediaPlayer value is true > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="centerItems header">
    <div class="spaceBetween inner centerItems"><a class="centerItems buttonLink hideDesktop hideDesktop" title="Home">
        <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="centerItems">
            <div class="column inputField inputField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="centerItems buttonLink buttonLink buttonLink" type="submit">
              <phmagnifyingglass class="icon" aria-hidden="true" size="24" weight="duotone"></phmagnifyingglass><span class="clamp text visuallyHidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="centerItems secondary">
        <div class="secondaryItem"><button class="centerItems buttonLink" type="button" title="Activate dark mode">
            <phmoon class="icon" aria-hidden="true" size="24" weight="duotone"></phmoon><span class="clamp text visuallyHidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="View account details">
              <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="clamp text">username</span>
            </button>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside>
    <div class="centerItems column sidebarNavigation hideMobile">
      <div class="mBM centerAll spaceBetween header"><a class="centerItems buttonLink musicLogo musicLogo" title="Home">
          <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
        </a><button class="centerItems buttonLink" type="button" title="Close Navigation">
          <phtextoutdent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextoutdent><span class="clamp text visuallyHidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Browse</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Discover">
                  <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Discover</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Podcasts">
                  <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="clamp text">Podcasts</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Radio Stations">
                  <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="clamp text">Radio Stations</span>
                </a></li>
            </ul>
          </li>
          <li>
            <h4 class="strong mBM sidebarTitle">Your library</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Albums">
                  <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="clamp text">Albums</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Artists">
                  <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="clamp text">Artists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Playlists">
                  <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Favourites">
                  <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text">Favourites</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Genres">
                  <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="clamp text">Genres</span>
                </a></li>
            </ul>
          </li>
        </ul>
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Playlist</h4>
            <ul class="mBM"></ul>
          </li>
          <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="clamp text"> Add playlist </span>
            </button></li>
        </ul>
      </nav>
    </div>
    <nav class="hideDesktop">
      <ul class="inner centerAll spaceBetween mobileNavigation">
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Browse">
            <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Browse</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Your library">
            <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="clamp text">Your library</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Playlists">
            <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
          </a></li>
      </ul>
    </nav>
  </aside>
  <main class="main mainContent">
    <div class="column mainContentInner">
      <!--v-if-->
      <div class="inner mBAllL">Default slot content.</div>
    </div>
  </main>
  <footer>
    <music-player-stub class="slide-up-down-enter-from slide-up-down-enter-active"></music-player-stub>
  </footer>
</div>"
`;

exports[`Default > when user is defined > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="centerItems header">
    <div class="spaceBetween inner centerItems"><a class="centerItems buttonLink hideDesktop hideDesktop" title="Home">
        <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="centerItems">
            <div class="column inputField inputField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="centerItems buttonLink buttonLink buttonLink" type="submit">
              <phmagnifyingglass class="icon" aria-hidden="true" size="24" weight="duotone"></phmagnifyingglass><span class="clamp text visuallyHidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="centerItems secondary">
        <div class="secondaryItem"><button class="centerItems buttonLink" type="button" title="Activate dark mode">
            <phmoon class="icon" aria-hidden="true" size="24" weight="duotone"></phmoon><span class="clamp text visuallyHidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="View account details">
              <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="clamp text">username</span>
            </button>
            <!--v-if-->
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside>
    <div class="centerItems column sidebarNavigation hideMobile">
      <div class="mBM centerAll spaceBetween header"><a class="centerItems buttonLink musicLogo musicLogo" title="Home">
          <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
        </a><button class="centerItems buttonLink" type="button" title="Close Navigation">
          <phtextoutdent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextoutdent><span class="clamp text visuallyHidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Browse</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Discover">
                  <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Discover</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Podcasts">
                  <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="clamp text">Podcasts</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Radio Stations">
                  <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="clamp text">Radio Stations</span>
                </a></li>
            </ul>
          </li>
          <li>
            <h4 class="strong mBM sidebarTitle">Your library</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Albums">
                  <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="clamp text">Albums</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Artists">
                  <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="clamp text">Artists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Playlists">
                  <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Favourites">
                  <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text">Favourites</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Genres">
                  <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="clamp text">Genres</span>
                </a></li>
            </ul>
          </li>
        </ul>
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Playlist</h4>
            <ul class="mBM"></ul>
          </li>
          <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="clamp text"> Add playlist </span>
            </button></li>
        </ul>
      </nav>
    </div>
    <nav class="hideDesktop">
      <ul class="inner centerAll spaceBetween mobileNavigation">
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Browse">
            <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Browse</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Your library">
            <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="clamp text">Your library</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Playlists">
            <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
          </a></li>
      </ul>
    </nav>
  </aside>
  <main class="main mainContent">
    <div class="column mainContentInner">
      <!--v-if-->
      <div class="inner mBAllL">Default slot content.</div>
    </div>
  </main>
  <footer>
    <!--v-if-->
  </footer>
</div>"
`;

exports[`Default > when user is defined > when the DropdownMenu component emits a click event > matches the snapshot 1`] = `
"<div class="mainLayout">
  <header class="centerItems header">
    <div class="spaceBetween inner centerItems"><a class="centerItems buttonLink hideDesktop hideDesktop" title="Home">
        <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
      </a>
      <div class="search">
        <form novalidate="">
          <div class="centerItems">
            <div class="column inputField inputField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="query">query <span class="required">*</span></label><input id="query" type="text" autocomplete="off" required="" placeholder="Enter query" class="input" value="">
              <!--v-if-->
            </div><button class="centerItems buttonLink buttonLink buttonLink" type="submit">
              <phmagnifyingglass class="icon" aria-hidden="true" size="24" weight="duotone"></phmagnifyingglass><span class="clamp text visuallyHidden"> Login </span>
            </button>
          </div>
        </form>
      </div>
      <div class="centerItems secondary">
        <div class="secondaryItem"><button class="centerItems buttonLink" type="button" title="Activate dark mode">
            <phmoon class="icon" aria-hidden="true" size="24" weight="duotone"></phmoon><span class="clamp text visuallyHidden">Activate dark mode</span>
          </button></div>
        <div class="secondaryItem">
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" type="button" title="View account details">
              <phdotsthreevertical class="icon" aria-hidden="true" size="24" weight="duotone"></phdotsthreevertical><span class="clamp text">username</span>
            </button>
            <div class="dropdown fade-enter-from fade-enter-active">
              <ul>
                <li class="dropdownItem" to="/user-profile"><a class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink">
                    <!--v-if--><span class="clamp text"> Profile </span>
                  </a></li>
                <li class="dropdownItem" href="server" target="_blank"><a class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" href="server" target="_blank">
                    <!--v-if--><span class="clamp text"> Server </span>
                  </a></li>
                <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                    <!--v-if--><span class="clamp text">Scan</span>
                  </button></li>
                <li class="divider" aria-hidden="true"></li>
                <li class="dropdownItem" icon="PhSignOut"><button class="centerItems buttonLink alignRight centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" type="button">
                    <phsignout class="icon" aria-hidden="true" size="24" weight="duotone"></phsignout><span class="clamp text"> Log out </span>
                  </button></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <aside>
    <div class="centerItems column sidebarNavigation hideMobile">
      <div class="mBM centerAll spaceBetween header"><a class="centerItems buttonLink musicLogo musicLogo" title="Home">
          <phwavesine class="icon" aria-hidden="true" size="32" weight="duotone"></phwavesine><span class="clamp text visuallyHidden"> Home </span>
        </a><button class="centerItems buttonLink" type="button" title="Close Navigation">
          <phtextoutdent class="icon" aria-hidden="true" size="24" weight="duotone"></phtextoutdent><span class="clamp text visuallyHidden">Close Navigation</span>
        </button></div>
      <nav class="navigationWrapper">
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Browse</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Discover">
                  <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Discover</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Podcasts">
                  <phapplepodcastslogo class="icon" aria-hidden="true" size="24" weight="duotone"></phapplepodcastslogo><span class="clamp text">Podcasts</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Radio Stations">
                  <phradio class="icon" aria-hidden="true" size="24" weight="duotone"></phradio><span class="clamp text">Radio Stations</span>
                </a></li>
            </ul>
          </li>
          <li>
            <h4 class="strong mBM sidebarTitle">Your library</h4>
            <ul class="mBM">
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Albums">
                  <phvinylrecord class="icon" aria-hidden="true" size="24" weight="duotone"></phvinylrecord><span class="clamp text">Albums</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Artists">
                  <phusersthree class="icon" aria-hidden="true" size="24" weight="duotone"></phusersthree><span class="clamp text">Artists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Playlists">
                  <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Favourites">
                  <phheart class="icon" aria-hidden="true" size="24" weight="duotone"></phheart><span class="clamp text">Favourites</span>
                </a></li>
              <li><a exactactiveclass="sidebarCurrentLink" class="centerItems buttonLink sidebarLink sidebarLink" title="Genres">
                  <phwaveform class="icon" aria-hidden="true" size="24" weight="duotone"></phwaveform><span class="clamp text">Genres</span>
                </a></li>
            </ul>
          </li>
        </ul>
        <ul>
          <li>
            <h4 class="strong mBM sidebarTitle">Playlist</h4>
            <ul class="mBM"></ul>
          </li>
          <li><button class="centerItems buttonLink centerAll fullWidth sidebarLink sidebarLink" type="button" title="Add playlist">
              <phlistplus class="icon" aria-hidden="true" size="24" weight="duotone"></phlistplus><span class="clamp text"> Add playlist </span>
            </button></li>
        </ul>
      </nav>
    </div>
    <nav class="hideDesktop">
      <ul class="inner centerAll spaceBetween mobileNavigation">
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Browse">
            <phcompass class="icon" aria-hidden="true" size="24" weight="duotone"></phcompass><span class="clamp text">Browse</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Your library">
            <phmusicnotes class="icon" aria-hidden="true" size="24" weight="duotone"></phmusicnotes><span class="clamp text">Your library</span>
          </a></li>
        <li class="item"><a class="centerItems buttonLink link smallFont column centerAll link smallFont column centerAll" title="Playlists">
            <phplaylist class="icon" aria-hidden="true" size="24" weight="duotone"></phplaylist><span class="clamp text">Playlists</span>
          </a></li>
      </ul>
    </nav>
  </aside>
  <main class="main mainContent">
    <div class="column mainContentInner">
      <!--v-if-->
      <div class="inner mBAllL">Default slot content.</div>
    </div>
  </main>
  <footer>
    <!--v-if-->
  </footer>
</div>"
`;
